--- a/index.html
+++ b/index.html
@@ -1,10 +1,125 @@
 <!DOCTYPE html>
 <html lang="ro">
 <head>
-    <meta charset="UTF-8">
-    <title>Test</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ziua Ta, Cosmina ❤️</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background: #FFC0CB; /* Fundal roz */
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      flex-direction: column;
+      font-family: 'Arial', sans-serif;
+      overflow: hidden;
+    }
+
+    h1 {
+      color: #fff;
+      text-shadow: 2px 2px #ff69b4;
+      text-align: center;
+    }
+
+    .photo-container {
+      position: relative;
+      width: 300px;
+      height: 300px;
+      margin-top: 20px;
+    }
+
+    .animated-photo {
+      width: 100%;
+      height: auto;
+      border-radius: 20px;
+      animation: float 3s ease-in-out infinite, pulse 2s infinite;
+      box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+    }
+
+    /* Poza plutește */
+    @keyframes float {
+      0% { transform: translateY(0px); }
+      50% { transform: translateY(-20px); }
+      100% { transform: translateY(0px); }
+    }
+
+    /* Poza pulsează */
+    @keyframes pulse {
+      0% { transform: scale(1); }
+      50% { transform: scale(1.05); }
+      100% { transform: scale(1); }
+    }
+
+    /* Inimioare plutitoare */
+    .heart {
+      position: absolute;
+      color: #ff0000;
+      font-size: 24px;
+      animation: rise 4s linear infinite;
+    }
+
+    @keyframes rise {
+      0% { transform: translateY(0) scale(1); opacity: 1; }
+      100% { transform: translateY(-300px) scale(1.5); opacity: 0; }
+    }
+
+    button {
+      margin-top: 30px;
+      padding: 10px 20px;
+      font-size: 1.2em;
+      border: none;
+      border-radius: 10px;
+      background-color: #ff9999;
+      color: white;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+
+    button:hover {
+      background-color: #ff4d4d;
+    }
+  </style>
 </head>
 <body>
-    <h1>Salut Cosmina ❤️</h1>
+
+  <h1>Salut Cosmina ❤️</h1>
+
+  <div class="photo-container">
+    <img src="bubu-dudu.jpg" alt="Bubu și Dudu" class="animated-photo">
+
+    <!-- Inimioare inițiale -->
+    <div class="heart" style="left:20%;">❤️</div>
+    <div class="heart" style="left:50%; animation-delay: 1s;">❤️</div>
+    <div class="heart" style="left:70%; animation-delay: 2s;">❤️</div>
+  </div>
+
+  <!-- Spațiu pentru muzică -->
+  <!-- <audio autoplay loop>
+    <source src="muzica.mp3" type="audio/mpeg">
+    Browserul tău nu suportă audio.
+  </audio> -->
+
+  <script>
+    const container = document.querySelector('.photo-container');
+
+    function createHeart() {
+      const heart = document.createElement('div');
+      heart.classList.add('heart');
+      heart.style.left = Math.random() * 80 + '%';
+      heart.style.fontSize = (20 + Math.random() * 20) + 'px';
+      heart.style.animationDuration = (3 + Math.random() * 3) + 's';
+      heart.textContent = '❤️';
+      container.appendChild(heart);
+
+      setTimeout(() => heart.remove(), 6000);
+    }
+
+    setInterval(createHeart, 500);
+  </script>
+
 </body>
 </html>
+
