--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   <h1>Salut Cosmina ❤️</h1>
 
   <div class="photo-container">
-    <img src="bubu-dudu.png" alt="Bubu și Dudu" class="animated-photo">
+    <img src="Bubu-loving-Dudu.png" alt="Bubu și Dudu" class="animated-photo">
 
     <!-- Inimioare inițiale -->
     <div class="heart" style="left:20%;">❤️</div>
@@ -122,5 +122,6 @@
 
 </body>
 </html>
+
 
 
