--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       padding: 0;
-      background: #FFC0CB; /* Fundal roz */
+      background: #FFC0CB;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -69,9 +69,9 @@
   <h1>Salut Cosmina ❤️</h1>
 
   <div class="photo-container">
+    <!-- **Nume fișier exact** -->
     <img src="Bubu-loving-Dudu.png" alt="Bubu și Dudu" class="animated-photo">
 
-    <!-- Inimioare inițiale -->
     <div class="heart" style="left:20%;">❤️</div>
     <div class="heart" style="left:50%; animation-delay: 1s;">❤️</div>
     <div class="heart" style="left:70%; animation-delay: 2s;">❤️</div>
@@ -97,5 +97,6 @@
 
 </body>
 </html>
+
 
 
