--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 </head>
 <body>
 
-  <h1>La multi ani iubirea mea! ❤️</h1>
+  <h1>Pentru Buburuza Cosmina ❤️</h1>
 
   <div class="photo-container">
     <!-- **Nume fișier exact** -->
@@ -97,6 +97,7 @@
 
 </body>
 </html>
+
 
 
 
