--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       padding: 0;
-      background: #FFC0CB;
+      background: #FFC0CB; /* Fundal roz */
       display: flex;
       justify-content: center;
       align-items: center;
@@ -62,14 +62,21 @@
       0% { transform: translateY(0) scale(1); opacity: 1; }
       100% { transform: translateY(-300px) scale(1.5); opacity: 0; }
     }
+
+    #messages-container {
+      margin-top: 20px;
+      text-align: center;
+      color: #fff;
+      font-size: 20px;
+      max-width: 90%;
+    }
   </style>
 </head>
 <body>
 
-  <h1>Pentru Buburuza Cosmina ❤️</h1>
+  <h1>Buburuza mea, e ziua ta astăzi ❤️</h1>
 
   <div class="photo-container">
-    <!-- **Nume fișier exact** -->
     <img src="Bubu-loving-Dudu.png" alt="Bubu și Dudu" class="animated-photo">
 
     <div class="heart" style="left:20%;">❤️</div>
@@ -77,7 +84,18 @@
     <div class="heart" style="left:70%; animation-delay: 2s;">❤️</div>
   </div>
 
+  <div id="messages-container"></div>
+
+  <!-- Muzica de fundal (opțional) -->
+  <!--
+  <audio autoplay loop>
+    <source src="muzica.mp3" type="audio/mpeg">
+    Browserul tău nu suportă audio.
+  </audio>
+  -->
+
   <script>
+    // Inimioare animate
     const container = document.querySelector('.photo-container');
 
     function createHeart() {
@@ -93,6 +111,36 @@
     }
 
     setInterval(createHeart, 500);
+
+    // Mesaje care apar unul câte unul
+    const messages = [
+      "Îți aduci aminte când am mers prima dată la mare împreună? 🌊",
+      "Îmi place cum râzi și cum îmi luminezi zilele 😍",
+      "Buburuza mea, fiecare zi cu tine e magică ✨",
+      "Abia aștept să sărbătorim astăzi împreună ❤️"
+    ];
+
+    const msgContainer = document.getElementById("messages-container");
+    let index = 0;
+
+    function showMessage() {
+      if (index < messages.length) {
+        const msg = document.createElement("div");
+        msg.textContent = messages[index];
+        msg.style.opacity = 0;
+        msg.style.transition = "opacity 1s";
+        msgContainer.appendChild(msg);
+
+        setTimeout(() => {
+          msg.style.opacity = 1;
+        }, 100);
+
+        index++;
+        setTimeout(showMessage, 4000);
+      }
+    }
+
+    setTimeout(showMessage, 2000); // start după 2 secunde
   </script>
 
 </body>
