Updatelast index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       padding: 0;
-      background: #FFC0CB; /* Fundal roz */
+      background: #FFC0CB;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -94,6 +94,7 @@
       transform: scale(1.1);
       background: #ffe6f0;
     }
+
   </style>
 </head>
 <body>
@@ -102,7 +103,6 @@
 
   <div class="photo-container">
     <img src="Bubu-loving-Dudu.png" alt="Bubu și Dudu" class="animated-photo">
-
     <div class="heart" style="left:20%;">❤️</div>
     <div class="heart" style="left:50%; animation-delay: 1s;">❤️</div>
     <div class="heart" style="left:70%; animation-delay: 2s;">❤️</div>
@@ -110,7 +110,6 @@
 
   <div id="messages-container"></div>
 
-  <!-- Mini-joc interactiv -->
   <div id="quiz-container">
     <div id="question" style="font-size: 22px; color: #fff; margin-bottom: 15px;"></div>
     <button id="btn-left">Da</button>
@@ -129,7 +128,6 @@
   <script>
     // Inimioare animate
     const container = document.querySelector('.photo-container');
-
     function createHeart() {
       const heart = document.createElement('div');
       heart.classList.add('heart');
@@ -140,20 +138,17 @@
       container.appendChild(heart);
       setTimeout(() => heart.remove(), 6000);
     }
-
     setInterval(createHeart, 500);
 
-    // Mesaje romantice cu fade in/fade out
+    // Mesaje romantice
     const messages = [
       "Îți aduci aminte când am mers prima dată la mare împreună? 🌊",
       "Îmi place cum râzi și cum îmi luminezi zilele 😍",
       "Buburuza mea, fiecare zi cu tine e magică ✨",
       "Abia aștept să sărbătorim astăzi împreună ❤️"
     ];
-
     const msgContainer = document.getElementById("messages-container");
     let msgIndex = 0;
-
     function showMessage() {
       if(msgIndex < messages.length) {
         const msg = document.createElement("div");
@@ -161,18 +156,15 @@
         msg.style.opacity = 0;
         msg.style.transition = "opacity 1s";
         msgContainer.appendChild(msg);
-
         setTimeout(() => { msg.style.opacity = 1; }, 100);
         setTimeout(() => { msg.style.opacity = 0; }, 3500);
-
         msgIndex++;
         setTimeout(showMessage, 4000);
       }
     }
-
     setTimeout(showMessage, 2000);
 
-    // Mini-joc interactiv cu efecte la butoane
+    // Mini-joc extins
     const btnLeft = document.getElementById("btn-left");
     const btnRight = document.getElementById("btn-right");
     const answerDiv = document.getElementById("answer");
@@ -181,7 +173,13 @@
     const quizData = [
       { question: "Simți că sunt tot pentru tine? 💖", left: "Da, mereu și pentru totdeauna! 😍", right: "Nu, dar totuși ești specială 😘" },
       { question: "Vrei să mai facem amintiri împreună?", left: "Da, să fie aventuri magice! ✨", right: "Nu, dar abia aștept să râdem împreună 😄" },
-      { question: "Mă vezi alături de tine mereu?", left: "Da, mereu! ❤️", right: "Nu, dar tot te iubesc 😘" }
+      { question: "Mă vezi alături de tine mereu?", left: "Da, mereu! ❤️", right: "Nu, dar tot te iubesc 😘" },
+      { question: "Care e amintirea ta preferată cu noi? 🌅", left: "Când am mers la plajă și am râs nonstop! 🏖️", right: "Când am stat doar noi doi și ne-am uitat la stele ✨" },
+      { question: "Vrei să mai facem surprize unul altuia? 🎁", left: "Da, să fie pline de zâmbete! 😍", right: "Nu, dar tot îmi plac surprizele tale 😘" },
+      { question: "Simți că inima ta bate mai repede când sunt lângă tine? ❤️", left: "Da, tot timpul! 💓", right: "Nu tot timpul, dar te iubesc la fel 😘" },
+      { question: "Vrei să râdem împreună mereu? 😄", left: "Da, râsul cu tine e magic! ✨", right: "Nu, dar râsul nostru e special 😘" },
+      { question: "Când te gândesti la mine, ce simți? 💖", left: "Fericire și iubire ❤️", right: "Un zâmbet și dor 😘" },
+      { question: "Vrei să fie ziua ta specială și mai memorabilă? 🎉", left: "Da, cu tine totul e perfect! 😍", right: "Nu, dar cu tine e deja minunat 😘" }
     ];
 
     let currentIndex = 0;
@@ -196,21 +194,14 @@
     function handleClick(isLeft) {
       const q = quizData[currentIndex];
       const text = isLeft ? q.left : q.right;
-
-      // efect click: pulse buton
       const btn = isLeft ? btnLeft : btnRight;
       btn.style.transform = "scale(1.2)";
       setTimeout(() => { btn.style.transform = "scale(1)"; }, 200);
-
-      // afișează mesaj cu fade
       answerDiv.style.opacity = 0;
       answerDiv.textContent = text;
       setTimeout(() => { answerDiv.style.opacity = 1; }, 50);
-
       // sunet la click (opțional)
-      // let audio = new Audio('click.mp3');
-      // audio.play();
-
+      // let audio = new Audio('click.mp3'); audio.play();
       nextQuestion();
     }
 
